--- a/Assignment_0.ipynb
+++ b/Assignment_0.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment-0",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMvEsULrjhsEUxnMLlNhUZy",
+      "authorship_tag": "ABX9TyORw+N6zsIRP37kMeVPrLrr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "Wh2tTkoMM6sg"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "5HN0Mhq4LFe2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,13 +76,13 @@
       "metadata": {
         "id": "MYY6pkbnMUvO"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!wget  -O stocks.parquet https://www.dropbox.com/s/gzpi950gfdz9dsk/stocks.parquet?dl=1"
+        "!wget  -O stocks.parquet https://www.dropbox.com/s/gzpi950gfdz9dsk/stocks.parquet?dl=1 # lets download the data"
       ],
       "metadata": {
         "id": "5b3j282aZMIO"
@@ -102,7 +102,7 @@
         "id": "jPZoUqKNZhRX",
         "outputId": "d4db624b-acf2-4593-e081-fc52121de1da"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "m9ZaZDOgNxhF"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
       "metadata": {
         "id": "AldxdSqFZ1mC"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +157,7 @@
         "id": "JLriTcuObF3k",
         "outputId": "34610db5-e851-4106-c1f8-7f2b0ea61ca6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
