--- a/Assignment_0.ipynb
+++ b/Assignment_0.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment-0",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORw+N6zsIRP37kMeVPrLrr",
+      "authorship_tag": "ABX9TyMHjCnz50Qxt/xEscyl8SAG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -314,7 +314,7 @@
       "cell_type": "code",
       "source": [
         "# Question 2 find top 20 best performer stocks - i.e. the stocks that provided the best return.\n",
-        "# if the stocks adj_close on the earliest date was X and the price on the 2021-01-01 is y and the number of days elapsed between these dates is Z.\n",
+        "# if the stocks adj_close on the earliest date was X and the adj_close on the 2021-01-01 is y and the number of days elapsed between these dates is Z.\n",
         "# Then return = Y/X/Z\n",
         "# Sort the stocks by this return and find the top 20"
       ],
