--- a/Assignment_0.ipynb
+++ b/Assignment_0.ipynb
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "Wh2tTkoMM6sg"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "5HN0Mhq4LFe2"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -79,35 +79,57 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. The NASDAQ Traded dataset is read, where the columns are delimited by \"|\", and  is stored in \"data\" variable.<br>\n",
+        "2. \"data_clean\" stores the data where \"Test Issues\" are \"N\".<br>\n",
+        "3. A set of all the NASDAQ symbols is stored in \"symbols\"<br>\n",
+        "4. Similarly, The NASDAQ Other listed dataset is read, where the columns are delimited by \"|\", and  is stored in \"data\" variable.<br>\n",
+        "5. \"data_clean\" stores the data where \"Test Issues\" are \"N\".<br>\n",
+        "6. A set of all the NASDAQ other traded symbols is stored in \"symbols\"<br>\n"
+      ],
+      "metadata": {
+        "id": "yy5edN3xvSDH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!wget  -O stocks.parquet https://www.dropbox.com/s/gzpi950gfdz9dsk/stocks.parquet?dl=1 # lets download the data"
       ],
       "metadata": {
-        "id": "5b3j282aZMIO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!ls stock_closing_prices.parquet -l #downloaded file"
-      ],
-      "metadata": {
+        "id": "5b3j282aZMIO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "jPZoUqKNZhRX",
-        "outputId": "d4db624b-acf2-4593-e081-fc52121de1da"
+        "outputId": "4066bff3-562f-494a-b692-532bbca7d23f"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "-rw-r--r-- 1 root root 1011183 Jan 20 02:52 stock_closing_prices.parquet\n"
+            "--2022-01-25 10:17:07--  https://www.dropbox.com/s/gzpi950gfdz9dsk/stocks.parquet?dl=1\n",
+            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.81.18, 2620:100:6030:18::a27d:5012\n",
+            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.81.18|:443... connected.\n",
+            "HTTP request sent, awaiting response... 301 Moved Permanently\n",
+            "Location: /s/dl/gzpi950gfdz9dsk/stocks.parquet [following]\n",
+            "--2022-01-25 10:17:08--  https://www.dropbox.com/s/dl/gzpi950gfdz9dsk/stocks.parquet\n",
+            "Reusing existing connection to www.dropbox.com:443.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com/cd/0/get/Bec8SgHKevhRyWPdBKzOVprEw7ZfMrc4d94isHt95G_r7HI1yPZSFFTR5P4vznQWjsFPjAoxRRLbroLb2hv3OK65v9Iy0j8gO6DDKqrkNxZJfYYCAXgwZ8Tx3EGcw6xuuuoqFqCpmeu7zyZ-MqE57wsO/file?dl=1# [following]\n",
+            "--2022-01-25 10:17:08--  https://uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com/cd/0/get/Bec8SgHKevhRyWPdBKzOVprEw7ZfMrc4d94isHt95G_r7HI1yPZSFFTR5P4vznQWjsFPjAoxRRLbroLb2hv3OK65v9Iy0j8gO6DDKqrkNxZJfYYCAXgwZ8Tx3EGcw6xuuuoqFqCpmeu7zyZ-MqE57wsO/file?dl=1\n",
+            "Resolving uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com (uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com)... 162.125.81.15, 2620:100:6031:15::a27d:510f\n",
+            "Connecting to uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com (uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com)|162.125.81.15|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 678640589 (647M) [application/binary]\n",
+            "Saving to: ‘stocks.parquet’\n",
+            "\n",
+            "stocks.parquet      100%[===================>] 647.20M  15.2MB/s    in 48s     \n",
+            "\n",
+            "2022-01-25 10:17:57 (13.6 MB/s) - ‘stocks.parquet’ saved [678640589/678640589]\n",
+            "\n"
           ]
         }
       ]
@@ -115,12 +137,37 @@
     {
       "cell_type": "code",
       "source": [
-        "#Bonus question 1 - find on internet and write the command that will download the all data from the symbols list. "
+        "!ls stocks.parquet -l #downloaded file"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jPZoUqKNZhRX",
+        "outputId": "cc05a218-3fee-410d-9fb7-2c3fa85628a3"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-rw-r--r-- 1 root root 678640589 Jan 25 10:17 stocks.parquet\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Bonus question 1 - find on internet and write the command that will download the all data from the symbols list. \n",
+        "symbols = pd.read_parquet('stocks.parquet', columns=[\"symbol\"]) #all symbols\n",
+        "symbols_unique = symbols.drop_duplicates() #unique symbols"
       ],
       "metadata": {
         "id": "m9ZaZDOgNxhF"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -130,6 +177,20 @@
       ],
       "metadata": {
         "id": "AldxdSqFZ1mC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Question 2 find top 20 best performer stocks - i.e. the stocks that provided the best return.\n",
+        "# if the stocks adj_close on the earliest date was X and the adj_close on the 2021-01-01 is y and the number of days elapsed between these dates is Z.\n",
+        "# Then return = Y/X/Z * changed it to (Y-X)/Z\n",
+        "# Sort the stocks by this return and find the top 20"
+      ],
+      "metadata": {
+        "id": "c3vJMi_8bAwC"
       },
       "execution_count": null,
       "outputs": []
@@ -312,16 +373,114 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 2 find top 20 best performer stocks - i.e. the stocks that provided the best return.\n",
-        "# if the stocks adj_close on the earliest date was X and the adj_close on the 2021-01-01 is y and the number of days elapsed between these dates is Z.\n",
-        "# Then return = Y/X/Z\n",
-        "# Sort the stocks by this return and find the top 20"
+        "df = pd.read_parquet('stocks.parquet', columns=[\"date\", \"adj_close\"])"
       ],
       "metadata": {
-        "id": "c3vJMi_8bAwC"
+        "id": "s3y6CxHLvieJ"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import datetime\n",
+        "import numpy as np\n",
+        "\n",
+        "d0 = datetime.strptime(df.iloc[0].date, '%Y-%m-%d').date()\n",
+        "X = df.iloc[0].adj_close\n",
+        "stock_start_ind = 0\n",
+        "ret = [np.nan for i in range(len(symbols_unique))]\n",
+        "count = 0\n",
+        "df_return = symbols_unique.copy(deep=False)\n",
+        "for i, rows in symbols_unique[1:].iterrows():\n",
+        "  if i-stock_start_ind >=1.00007:  #to remove stocks with 1 day's performance recorded only\n",
+        "    Y = df.iloc[i-1].adj_close\n",
+        "    d1 = datetime.strptime(df.iloc[i-1].date, '%Y-%m-%d').date()\n",
+        "    Z = d1 - d0\n",
+        "    Z = Z.days\n",
+        "    ret[count] = ((Y-X)/Z)\n",
+        "    d0 = datetime.strptime(df.iloc[i].date, '%Y-%m-%d').date()\n",
+        "    X = df.iloc[i].adj_close\n",
+        "  stock_start_ind = i-1\n",
+        "  count+=1\n",
+        "\n",
+        "# to account for the last stock\n",
+        "if df.index[-1] - df.index[i] >= 1.00007:\n",
+        "  Y = df.iloc[-1].adj_close\n",
+        "  d1 = datetime.strptime(df.iloc[-1].date, '%Y-%m-%d').date()\n",
+        "  Z = d1 - d0\n",
+        "  Z = Z.days\n",
+        "  ret[len(ret)] = ((Y-X)/Z)\n",
+        "  \n",
+        "df_return['ret'] = ret"
+      ],
+      "metadata": {
+        "id": "3ut4-5M0vv2a",
+        "outputId": "b364766b-0cb4-4fe0-bf00-80cbdbd798fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:16: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "  app.launch_new_instance()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_return = df_return.sort_values(by='ret', ascending=False)\n",
+        "\n",
+        "print(\"Best returning stocks are:\\nSymbol \\t Return\")\n",
+        "for i, rows in df_return[:20].iterrows():\n",
+        "  print(rows.symbol,\"\\t\", rows.ret)\n"
+      ],
+      "metadata": {
+        "id": "VJ-YtHCUvyuj",
+        "outputId": "a00c5889-b592-4381-ca7a-ce686b51fd43",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Best returning stocks are:\n",
+            "Symbol \t Return\n",
+            "JE \t 2864610111595566.0\n",
+            "AVGOP \t 1.3786403322682796\n",
+            "HCP \t 0.6894442240397135\n",
+            "MNDY \t 0.6533999633789063\n",
+            "SHOP \t 0.5733899568256579\n",
+            "CABO \t 0.5716100522834653\n",
+            "DWAC \t 0.4887499917637218\n",
+            "DWACU \t 0.4752252080419042\n",
+            "GOOG \t 0.459267609201032\n",
+            "GOOGL \t 0.4587331857002765\n",
+            "NVR \t 0.43561101319905093\n",
+            "IOT \t 0.3891666730244954\n",
+            "AMZN \t 0.37716098304745144\n",
+            "SITM \t 0.36944011847178143\n",
+            "SWAR \t 0.35371426173618864\n",
+            "UPST \t 0.34726062226802745\n",
+            "MDB \t 0.3445228776121451\n",
+            "BKUS \t 0.3347140720912388\n",
+            "TSVT \t 0.3194444444444444\n",
+            "BNTX \t 0.2974041984756149\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
