--- a/Assignment_0_aws.ipynb
+++ b/Assignment_0_aws.ipynb
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "Wh2tTkoMM6sg"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "5HN0Mhq4LFe2"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "MYY6pkbnMUvO"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -102,33 +102,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4066bff3-562f-494a-b692-532bbca7d23f"
+        "outputId": "ce96407c-99d3-411b-83e1-aee0e6b90a93"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-01-25 10:17:07--  https://www.dropbox.com/s/gzpi950gfdz9dsk/stocks.parquet?dl=1\n",
-            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.81.18, 2620:100:6030:18::a27d:5012\n",
-            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.81.18|:443... connected.\n",
+            "--2022-01-25 18:27:24--  https://www.dropbox.com/s/gzpi950gfdz9dsk/stocks.parquet?dl=1\n",
+            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.5.18, 2620:100:601d:18::a27d:512\n",
+            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.5.18|:443... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: /s/dl/gzpi950gfdz9dsk/stocks.parquet [following]\n",
-            "--2022-01-25 10:17:08--  https://www.dropbox.com/s/dl/gzpi950gfdz9dsk/stocks.parquet\n",
+            "--2022-01-25 18:27:24--  https://www.dropbox.com/s/dl/gzpi950gfdz9dsk/stocks.parquet\n",
             "Reusing existing connection to www.dropbox.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com/cd/0/get/Bec8SgHKevhRyWPdBKzOVprEw7ZfMrc4d94isHt95G_r7HI1yPZSFFTR5P4vznQWjsFPjAoxRRLbroLb2hv3OK65v9Iy0j8gO6DDKqrkNxZJfYYCAXgwZ8Tx3EGcw6xuuuoqFqCpmeu7zyZ-MqE57wsO/file?dl=1# [following]\n",
-            "--2022-01-25 10:17:08--  https://uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com/cd/0/get/Bec8SgHKevhRyWPdBKzOVprEw7ZfMrc4d94isHt95G_r7HI1yPZSFFTR5P4vznQWjsFPjAoxRRLbroLb2hv3OK65v9Iy0j8gO6DDKqrkNxZJfYYCAXgwZ8Tx3EGcw6xuuuoqFqCpmeu7zyZ-MqE57wsO/file?dl=1\n",
-            "Resolving uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com (uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com)... 162.125.81.15, 2620:100:6031:15::a27d:510f\n",
-            "Connecting to uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com (uc5de92f43c92697bdae36dca2ee.dl.dropboxusercontent.com)|162.125.81.15|:443... connected.\n",
+            "Location: https://uc285c6094bac0444af79bcc98fb.dl.dropboxusercontent.com/cd/0/get/Bee8z04fRcfRTaHAeMspjsfllEGNFMBOaLVWM4p2GU9QeaFCEukl67pamJm0UKDwViqqPj-cuz7KnaCUA3O0s7KMjWesEX9k1OkfY79WopcNOKxUlC7YKUtP_4Yoxfw9H0-Q5osBzzzC7w9QQWGeQiHB/file?dl=1# [following]\n",
+            "--2022-01-25 18:27:25--  https://uc285c6094bac0444af79bcc98fb.dl.dropboxusercontent.com/cd/0/get/Bee8z04fRcfRTaHAeMspjsfllEGNFMBOaLVWM4p2GU9QeaFCEukl67pamJm0UKDwViqqPj-cuz7KnaCUA3O0s7KMjWesEX9k1OkfY79WopcNOKxUlC7YKUtP_4Yoxfw9H0-Q5osBzzzC7w9QQWGeQiHB/file?dl=1\n",
+            "Resolving uc285c6094bac0444af79bcc98fb.dl.dropboxusercontent.com (uc285c6094bac0444af79bcc98fb.dl.dropboxusercontent.com)... 162.125.5.15, 2620:100:601d:15::a27d:50f\n",
+            "Connecting to uc285c6094bac0444af79bcc98fb.dl.dropboxusercontent.com (uc285c6094bac0444af79bcc98fb.dl.dropboxusercontent.com)|162.125.5.15|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 678640589 (647M) [application/binary]\n",
             "Saving to: ‘stocks.parquet’\n",
             "\n",
-            "stocks.parquet      100%[===================>] 647.20M  15.2MB/s    in 48s     \n",
+            "stocks.parquet      100%[===================>] 647.20M  49.0MB/s    in 12s     \n",
             "\n",
-            "2022-01-25 10:17:57 (13.6 MB/s) - ‘stocks.parquet’ saved [678640589/678640589]\n",
+            "2022-01-25 18:27:37 (55.5 MB/s) - ‘stocks.parquet’ saved [678640589/678640589]\n",
             "\n"
           ]
         }
@@ -144,15 +144,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jPZoUqKNZhRX",
-        "outputId": "cc05a218-3fee-410d-9fb7-2c3fa85628a3"
+        "outputId": "3ebfe4a2-7fe8-4855-9afc-c4558acccefb"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "-rw-r--r-- 1 root root 678640589 Jan 25 10:17 stocks.parquet\n"
+            "-rw-r--r-- 1 root root 678640589 Jan 25 18:27 stocks.parquet\n"
           ]
         }
       ]
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "m9ZaZDOgNxhF"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -178,7 +178,7 @@
       "metadata": {
         "id": "AldxdSqFZ1mC"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
       "metadata": {
         "id": "c3vJMi_8bAwC"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -215,16 +215,16 @@
           "height": 81
         },
         "id": "JLriTcuObF3k",
-        "outputId": "34610db5-e851-4106-c1f8-7f2b0ea61ca6"
+        "outputId": "bf9177e8-14a6-461b-e640-7e50075a9232"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-94fed28e-fe0a-4e85-b135-3ca5c6aa7a48\">\n",
+              "  <div id=\"df-fc7439ea-d465-4b8a-b52d-360e189deaf3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -281,7 +281,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-94fed28e-fe0a-4e85-b135-3ca5c6aa7a48')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fc7439ea-d465-4b8a-b52d-360e189deaf3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -332,12 +332,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-94fed28e-fe0a-4e85-b135-3ca5c6aa7a48 button.colab-df-convert');\n",
+              "          document.querySelector('#df-fc7439ea-d465-4b8a-b52d-360e189deaf3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-94fed28e-fe0a-4e85-b135-3ca5c6aa7a48');\n",
+              "          const element = document.querySelector('#df-fc7439ea-d465-4b8a-b52d-360e189deaf3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -366,7 +366,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 9
         }
       ]
     },
@@ -378,7 +378,7 @@
       "metadata": {
         "id": "s3y6CxHLvieJ"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -417,12 +417,12 @@
       ],
       "metadata": {
         "id": "3ut4-5M0vv2a",
-        "outputId": "b364766b-0cb4-4fe0-bf00-80cbdbd798fa",
+        "outputId": "e87ce52d-fc54-494f-a848-2022c0930c7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,12 +445,12 @@
       ],
       "metadata": {
         "id": "VJ-YtHCUvyuj",
-        "outputId": "a00c5889-b592-4381-ca7a-ce686b51fd43",
+        "outputId": "df7a8839-ef39-41ee-d779-d59579b9d394",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,8 +491,17 @@
       "metadata": {
         "id": "c1jLuH32dDhR"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The AWS instance works comparatively faster than running natively on Colab. In my case, about 5 seconds faster, in performing all the steps."
+      ],
+      "metadata": {
+        "id": "tVBURSKagD_N"
+      }
     }
   ]
 }
